<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/title_bar_container"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <android.support.v7.widget.Toolbar
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|snap|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/publish_note"
                    android:textSize="16sp" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="100"
        android:orientation="horizontal">

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/act_publish_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="15"
            android:text="@string/publish_note_label" />

        <EditText
            android:id="@+id/act_publish_note"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="85" />
    </LinearLayout>

    <Button
        android:background="@drawable/shape_btn_select"
        android:id="@+id/act_publish_btn"
        android:layout_width="200dp"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/publish_btn" />

</LinearLayout>