<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/title_bar_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <android.support.v7.widget.Toolbar
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|snap|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/publish_speech_note"
                    android:textSize="16sp" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/act_btn_Record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_mic_white_36dp" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/recordProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif-light"
        android:textSize="60sp" />

    <ProgressBar
        android:id="@+id/recordProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/title_bar_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/record_progress_bar_background"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/record_progress_bar" />

    <Button
        android:id="@+id/act_btn_Pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_media_pause"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/pause_recording_button"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/recording_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/act_btn_Record"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/record_prompt"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>